1999-08-21  Miquel van Smoorenburg (miquels@cistron.nl)

	* configure.in: check for GNU Make
	* doc/*: change Cistron Radius to FreeRadius
	* src/modules/Makefile.in: fix rm -f lib/* (bailed out on lib/CVS)
	* debian/*: some changes (might want to rip out completely)
	* doc/ChangeLog: new format, more like other projects.

radiusd-cistron (1.6-alpha3) experimental; urgency=low

  * Changed directory structure. Each module is now in it's own directory.

 -- Miquel van Smoorenburg <miquels@cistron.nl>  Thu, 12 Aug 1999 19:12:47 +0200

radiusd-cistron (1.6-alpha2) experimental; urgency=low

  * 1.6-alpha2 "Total Eclipse" release ;)
  * Moved a lot of code around
  * Added module code from Alan DeKok
  * Moved more code around, made some stuff into huntgroups
  * You can now register a function that is called when a
    certain valuepair is compared with another
  * Operator support not completely merged (still todo)
  * Only tested with a few requests, but hey, it compiles ...
  * Might rename result constants in modules.h to AUTH_, AUTZ_, ACCT_
  * Rewrote builddbm.c - last remnant of Livingston code is now gone
  * Bugs from alpha1 not fixed yet either

 -- Miquel van Smoorenburg <miquels@cistron.nl>  Wed, 11 Aug 1999 00:55:17 +0200

radiusd-cistron (1.6-alpha1) experimental; urgency=low

  * Fix off_t cast in lseek() in radzap.c
  * Fix getopt() args
  * Fix some proxy memory leaks - Jonathan Ruano <kobalt@james.encomix.es>
  * checkrad.pl update by Antonio Dias, rewritten Cyclades PathRAS subroutine
    and a new Patton 2800 NAS SNMP routine. Also some doc updates.
  * Fix huntgroup-compare to use operators
  * Added /etc/shells checking, turned off by default./RADIUSD/ANY/SHELL
    does the same as /SENDMAIL/ANY/SHELL for smrsh.
  * Added dictionary.acc - Stephane Marzloff
  * Changed the whole configuration over to autoconf
  * We now use IP numbers in network order internally
  * Added VersaNet support to checkrad.pl by Versanet Communications,